--- a/index.html
+++ b/index.html
@@ -6,14 +6,93 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2122</title>
+	<title>Mooiwatplantendoen</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2122</h1>
+	<header>
+		<img src="images/logo.png" width="259px" alt="logo">
+
+		<nav class="menu">
+			<ul>
+			  <li><a href="#">Nieuwsbrief</a></li>
+			  <li><a href="#">Over ons</a></li>
+			  <li><a href="#">Zoeken</a></li>
+			  <li><a href="#">Wonen</a></li>
+			  <li><a href="#">Verzorging</a></li>
+			  <li><a href="#">Mensen</a></li>
+			  <li><a href="#">Fashion</a></li>
+			  <li><a href="#">Eten</a></li>
+			  <li><a href="#">Erop uit</a></li>
+			  <li><a href="#">Plantenwijzer</a></li>
+			  <li><a href="#">Thema's</a></li>
+			</ul>
+		  </nav>
+
+	</header>
+<main>
+<article>
+	<img src="images/planten.jpeg" width="259px" alt="planten">
+	<h2>Najaar/Winter 2021
+		Trend collectie:
+		Balanced biotope
+	</h2>
+	<P>Planten die je dit seizoen niet wilt missen</P>
+	<a href="#">WONEN</a>
+</article>
+
+<article>
+	<img src="images/trendcollectie.png" width="259px" alt="planten">
+	<h2>Lookbook trend collectie
+	</h2>
+</article>
+
+
+<article>
+	<img src="images/weelderig.jpeg" width="259px" alt="planten">
+	<h2>Een weelderig outdoor border
+	</h2>
+	<a href="#">WONEN</a>
+</article>
+
+<article>
+	<img src="images/nazomeren.jpg" width="259px" alt="planten">
+	<h2>Nazomeren met groenrijk
+	</h2>
+	<a href="#">Erop uit</a>
+</article>
+
+<form>
+<h2>Nieuwsbrief</h2>
+<p>schrijf je in en ontvang iedere maand de leukste plant inspiratie</p>
+<input type="text" name="email" />
+<a href="#">Inschrijven</a>
+</form>
+
+<article>
+	<img src="images/doorlopend.jpeg" width="259px" alt="planten">
+	<h2>Doorlopend plantpatroon
+	</h2>
+	<a href="#">Wonen</a>
+</article>
+
+<article>
+	<img src="images/diy.jpeg" width="259px" alt="planten">
+	<h2>Diy: Picture perfect palmgras
+	</h2>
+	<a href="#">Wonen</a>
+</article>
+
+<a href="#">Toon meer</a>
+
+</main>	
+
+<footer>
+	
+</footer>
 
 	<script src="scripts/script.js"></script>
 </body>
