--- a/index.html
+++ b/index.html
@@ -91,7 +91,34 @@
 </main>	
 
 <footer>
-	
+	<header>Volg ons</header>
+
+	<a href="#"><img src="images/facebook.png" width="50" alt="facebook logo"></a>
+	<a href="#"><img src="images/pinterest.png" width="50" alt="facebook logo"></a>
+	<a href="#"><img src="images/instagram.png" width="50" alt="facebook logo"></a>
+<p> of schrijf je in voor onze <a href="#">nieuwsbrief.</a></p>
+
+<img src="images/logo.png" width="259px" alt="logo">
+
+<p>is een initiatief van <a href="#">Bloemenbureau Holland.</a> Kijk ook eens op
+	<a href="#">Mooiwatbloemendoen.nl.</a> </p>
+
+	<p>Internationaal: <a href="#">pflanzenfreude.de,</a>
+		<a href="#">maplantemonbonheur.fr,</a>	
+		<a href="#">thejoyofplants.co.uk.</a>
+	</p>
+
+	<nav class="footermenu">
+		<ul>
+		  <li><a href="#">Disclaimer</a></li>
+		  <li><a href="#">Cookie beleid</a></li>
+		  <li><a href="#">Privacy</a></li>
+		  <li><a href="#">Pers</a></li>
+		</ul>
+	  </nav>
+
+
+
 </footer>
 
 	<script src="scripts/script.js"></script>
