--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<header>
-		<img src="images/logo.png" width="259px" alt="logo">
+		<a href="index.html"><img src="images/logo.png" width="259" alt="website logo"></a>
 
 		<nav class="menu">
 			<ul>
@@ -41,64 +41,64 @@
 		Balanced biotope
 	</h2>
 	<P>Planten die je dit seizoen niet wilt missen</P>
-	<a href="#">WONEN</a>
+	<a href="calathea.html">WONEN</a>
 </article>
 
 <article>
-	<img src="images/trendcollectie.png" width="259px" alt="planten">
+	<img src="images/trendcollectie.png" width="259px" alt="trend collectie">
 	<h2>Lookbook trend collectie
 	</h2>
 </article>
 
 
 <article>
-	<img src="images/weelderig.jpeg" width="259px" alt="planten">
+	<img src="images/weelderig.jpeg" width="259px" alt="weelderig outdoor">
 	<h2>Een weelderig outdoor border
 	</h2>
-	<a href="#">WONEN</a>
+	<a href="calathea.html">WONEN</a>
 </article>
 
 <article>
-	<img src="images/nazomeren.jpg" width="259px" alt="planten">
+	<img src="images/nazomeren.jpg" width="259px" alt="groenrijk">
 	<h2>Nazomeren met groenrijk
 	</h2>
-	<a href="#">Erop uit</a>
+	<a href="calathea.html">Erop uit</a>
 </article>
 
 <form>
 <h2>Nieuwsbrief</h2>
 <p>schrijf je in en ontvang iedere maand de leukste plant inspiratie</p>
 <input type="text" name="email" />
-<a href="#">Inschrijven</a>
+<a href="calathea.html">Inschrijven</a>
 </form>
 
 <article>
 	<img src="images/doorlopend.jpeg" width="259px" alt="planten">
 	<h2>Doorlopend plantpatroon
 	</h2>
-	<a href="#">Wonen</a>
+	<a href="calathea.html">Wonen</a>
 </article>
 
 <article>
 	<img src="images/diy.jpeg" width="259px" alt="planten">
 	<h2>Diy: Picture perfect palmgras
 	</h2>
-	<a href="#">Wonen</a>
+	<a href="calathea.html">Wonen</a>
 </article>
 
-<a href="#">Toon meer</a>
+<a href="calathea.html">Toon meer</a>
 
 </main>	
 
 <footer>
-	<header>Volg ons</header>
+	<h2>Volg ons</h2>
 
 	<a href="#"><img src="images/facebook.png" width="50" alt="facebook logo"></a>
-	<a href="#"><img src="images/pinterest.png" width="50" alt="facebook logo"></a>
-	<a href="#"><img src="images/instagram.png" width="50" alt="facebook logo"></a>
+	<a href="#"><img src="images/pinterest.png" width="50" alt="pinterest logo"></a>
+	<a href="#"><img src="images/instagram.png" width="50" alt="instagram logo"></a>
 <p> of schrijf je in voor onze <a href="#">nieuwsbrief.</a></p>
 
-<img src="images/logo.png" width="259px" alt="logo">
+<a href="index.html"><img src="images/logo.png" width="259" alt="website logo"></a>
 
 <p>is een initiatief van <a href="#">Bloemenbureau Holland.</a> Kijk ook eens op
 	<a href="#">Mooiwatbloemendoen.nl.</a> </p>
