--- a/calathea.html
+++ b/calathea.html
@@ -97,7 +97,7 @@
         <img src="images/4keer.jpeg" width="259px" alt="planten">
         <h2>4x planten stylen in huis
         </h2>
-        <a href="#">WONEN</a>
+        <a href="#">Wonen</a>
     </article>
 
     <article>
