--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		Balanced biotope
 	</h2>
 	<P>Planten die je dit seizoen niet wilt missen</P>
-	<a href="calathea.html">WONEN</a>
+	<a href="calathea.html">Wonen</a>
 </article>
 
 <article>
@@ -55,7 +55,7 @@
 	<img src="images/weelderig.jpeg" width="259px" alt="weelderig outdoor">
 	<h2>Een weelderig outdoor border
 	</h2>
-	<a href="calathea.html">WONEN</a>
+	<a href="calathea.html">Wonen</a>
 </article>
 
 <article>
@@ -116,8 +116,6 @@
 		  <li><a href="#">Pers</a></li>
 		</ul>
 	  </nav>
-
-
 
 </footer>
 
