--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>Mooiwatplantendoen</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.typekit.net/lqq6lwf.css">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
@@ -34,14 +35,16 @@
 
 	</header>
 <main>
-<article>
-	<img src="images/planten.jpeg" width="259px" alt="planten">
+<article class="blok1">
+	<img src="images/planten.jpeg" alt="planten">
+	<div class="tekstblok1">
 	<h2>Najaar/Winter 2021
 		Trend collectie:
 		Balanced biotope
 	</h2>
 	<P>Planten die je dit seizoen niet wilt missen</P>
 	<a href="calathea.html">Wonen</a>
+	</div>
 </article>
 
 <article>
