--- a/index.html
+++ b/index.html
@@ -47,18 +47,20 @@
 	</div>
 </article>
 
-<article>
+<article class="blok2">
 	<img src="images/trendcollectie.png" width="259px" alt="trend collectie">
 	<h2>Lookbook trend collectie
 	</h2>
 </article>
 
 
-<article>
+<article class="blok3">
 	<img src="images/weelderig.jpeg" width="259px" alt="weelderig outdoor">
+	<div class="tekstblok3">
 	<h2>Een weelderig outdoor border
 	</h2>
 	<a href="calathea.html">Wonen</a>
+	</div>
 </article>
 
 <article>
