--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 </article>
 
 <article class="blok2">
-	<img src="images/trendcollectie.png" width="259px" alt="trend collectie">
+	<img src="images/trendcollectie.png" width="228px" alt="trend collectie">
 	<h2>Lookbook trend collectie
 	</h2>
 </article>
 
 
 <article class="blok3">
-	<img src="images/weelderig.jpeg" width="259px" alt="weelderig outdoor">
+	<img src="images/weelderig.jpeg" width="228px" alt="weelderig outdoor">
 	<div class="tekstblok3">
 	<h2>Een weelderig outdoor border
 	</h2>
@@ -63,29 +63,33 @@
 	</div>
 </article>
 
-<article>
-	<img src="images/nazomeren.jpg" width="259px" alt="groenrijk">
+<article class="blok4">
+	<img src="images/nazomeren.jpg" width="228px" alt="groenrijk">
+	<div class="tekstblok4">
 	<h2>Nazomeren met groenrijk
 	</h2>
 	<a href="calathea.html">Erop uit</a>
+	</div>
 </article>
 
-<form>
+<form class="nieuwsbrief">
+<div class="nieuwsbrieftekst">
 <h2>Nieuwsbrief</h2>
 <p>schrijf je in en ontvang iedere maand de leukste plant inspiratie</p>
 <input type="text" name="email" />
 <a href="calathea.html">Inschrijven</a>
+</div>
 </form>
 
 <article>
-	<img src="images/doorlopend.jpeg" width="259px" alt="planten">
+	<img src="images/doorlopend.jpeg" width="228px" alt="planten">
 	<h2>Doorlopend plantpatroon
 	</h2>
 	<a href="calathea.html">Wonen</a>
 </article>
 
 <article>
-	<img src="images/diy.jpeg" width="259px" alt="planten">
+	<img src="images/diy.jpeg" width="228px" alt="planten">
 	<h2>Diy: Picture perfect palmgras
 	</h2>
 	<a href="calathea.html">Wonen</a>
