--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 	</header>
 <main>
+	
 <article class="blok1">
 	<img src="images/planten.jpeg" alt="planten">
 	<div class="tekstblok1">
@@ -72,7 +73,8 @@
 	</div>
 </article>
 
-<form class="nieuwsbrief">
+<article class="nieuwsbriefsite">
+<form>
 <div class="nieuwsbrieftekst">
 <h2>Nieuwsbrief</h2>
 <p>schrijf je in en ontvang iedere maand de leukste plant inspiratie</p>
@@ -80,24 +82,31 @@
 <a href="calathea.html">Inschrijven</a>
 </div>
 </form>
+</article>
 
-<article>
+<article class="blok5">
 	<img src="images/doorlopend.jpeg" width="228px" alt="planten">
+	<div class="tekstblok5">
 	<h2>Doorlopend plantpatroon
 	</h2>
 	<a href="calathea.html">Wonen</a>
+</div>
 </article>
 
-<article>
+<article class="blok6">
 	<img src="images/diy.jpeg" width="228px" alt="planten">
+	<div class="tekstblok6">
 	<h2>Diy: Picture perfect palmgras
 	</h2>
 	<a href="calathea.html">Wonen</a>
+</div>
 </article>
 
+<article class="toonmeerbutton">
 <a href="calathea.html">Toon meer</a>
+</article>
 
-</main>	
+</main>
 
 <footer>
 	<h2>Volg ons</h2>
