--- a/index.html
+++ b/index.html
@@ -1,143 +1,128 @@
 <!doctype html>
 <html lang="nl">
-	
-<head>
-	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Mooiwatplantendoen</title>
-	
-	<link href="styles/style.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.typekit.net/lqq6lwf.css">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
-</head>
 
-<body>
-	<header>
-		<a href="index.html"><img src="images/logo.png" width="259" alt="website logo"></a>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="author" content="jouw naam">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<nav class="menu">
-			<ul>
-			  <li><a href="#">Nieuwsbrief</a></li>
-			  <li><a href="#">Over ons</a></li>
-			  <li><a href="#">Zoeken</a></li>
-			  <li><a href="#">Wonen</a></li>
-			  <li><a href="#">Verzorging</a></li>
-			  <li><a href="#">Mensen</a></li>
-			  <li><a href="#">Fashion</a></li>
-			  <li><a href="#">Eten</a></li>
-			  <li><a href="#">Erop uit</a></li>
-			  <li><a href="#">Plantenwijzer</a></li>
-			  <li><a href="#">Thema's</a></li>
-			</ul>
-		  </nav>
+    <title>Mooiwatplantendoen</title>
 
-	</header>
-<main>
-	
-<article class="blok1">
-	<img src="images/planten.jpeg" alt="planten">
-	<div class="tekstblok1">
-	<h2>Najaar/Winter 2021
-		Trend collectie:
-		Balanced biotope
-	</h2>
-	<P>Planten die je dit seizoen niet wilt missen</P>
-	<a href="calathea.html">Wonen</a>
-	</div>
-</article>
+    <link href="styles/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/lqq6lwf.css">
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+  </head>
 
-<article class="blok2">
-	<img src="images/trendcollectie.png" width="228px" alt="trend collectie">
-	<h2>Lookbook trend collectie
-	</h2>
-</article>
+  <body>
+    <header>
+      <a href="index.html"><img src="images/logo.png" width="259" alt="website logo"></a>
+
+      <nav>
+        <ul>
+          <li><a href="#">Nieuwsbrief</a></li>
+          <li><a href="#">Over ons</a></li>
+          <li><a href="#">Zoeken</a></li>
+          <li><a href="#">Wonen</a></li>
+          <li><a href="#">Verzorging</a></li>
+          <li><a href="#">Mensen</a></li>
+          <li><a href="#">Fashion</a></li>
+          <li><a href="#">Eten</a></li>
+          <li><a href="#">Erop uit</a></li>
+          <li><a href="#">Plantenwijzer</a></li>
+          <li><a href="#">Thema's</a></li>
+        </ul>
+      </nav>
+
+    </header>
+    <main>
+
+      <article>
+        <img src="images/planten.jpeg" alt="planten">
+          <h2>Najaar/Winter 2021
+            Trend collectie:
+            Balanced biotope
+          </h2>
+          <P>Planten die je dit seizoen niet wilt missen</P>
+          <a href="calathea.html">Wonen</a>
+      </article>
+
+      <article>
+        <img src="images/trendcollectie.png"  alt="trend collectie">
+        <p>Lookbook trend collectie
+		</p>
+      </article>
 
 
-<article class="blok3">
-	<img src="images/weelderig.jpeg" width="228px" alt="weelderig outdoor">
-	<div class="tekstblok3">
-	<h2>Een weelderig outdoor border
-	</h2>
-	<a href="calathea.html">Wonen</a>
-	</div>
-</article>
+      <article>
+        <img src="images/weelderig.jpeg" alt="weelderig outdoor">
+          <p>Een weelderig outdoor border
+		  </p>
+          <a href="calathea.html">Wonen</a>
+      </article>
 
-<article class="blok4">
-	<img src="images/nazomeren.jpg" width="228px" alt="groenrijk">
-	<div class="tekstblok4">
-	<h2>Nazomeren met groenrijk
-	</h2>
-	<a href="calathea.html">Erop uit</a>
-	</div>
-</article>
+      <article>
+        <img src="images/nazomeren.jpg" alt="groenrijk">
+          <p>Nazomeren met groenrijk
+		  </p>
+          <a href="calathea.html">Erop uit</a>
+      </article>
 
-<article class="nieuwsbriefsite">
-<form>
-<div class="nieuwsbrieftekst">
-<h2>Nieuwsbrief</h2>
-<p>schrijf je in en ontvang iedere maand de leukste plant inspiratie</p>
-<input type="text" name="email" />
-<a href="calathea.html">Inschrijven</a>
-</div>
-</form>
-</article>
+      <article>
+        <form>
+            <h2>Nieuwsbrief</h2>
+            <p>schrijf je in en ontvang iedere maand de leukste plant inspiratie</p>
+            <input type="text" name="email" />
+            <a href="calathea.html">Inschrijven</a>
+        </form>
+      </article>
 
-<article class="blok5">
-	<img src="images/doorlopend.jpeg" width="228px" alt="planten">
-	<div class="tekstblok5">
-	<h2>Doorlopend plantpatroon
-	</h2>
-	<a href="calathea.html">Wonen</a>
-</div>
-</article>
+      <article>
+        <img src="images/doorlopend.jpeg"  alt="planten">
+          <p>Doorlopend plantpatroon
+          <p>
+          <a href="calathea.html">Wonen</a>
+      </article>
 
-<article class="blok6">
-	<img src="images/diy.jpeg" width="228px" alt="planten">
-	<div class="tekstblok6">
-	<h2>Diy: Picture perfect palmgras
-	</h2>
-	<a href="calathea.html">Wonen</a>
-</div>
-</article>
+      <article>
+        <img src="images/diy.jpeg"  alt="planten">
+          <p>Diy: Picture perfect palmgras
+		  </p>
+          <a href="calathea.html">Wonen</a>
+      </article>
 
-<article class="toonmeerbutton">
-<a href="calathea.html">Toon meer</a>
-</article>
+        <a href="calathea.html">Toon meer</a>
 
-</main>
+    </main>
 
-<footer>
-	<h2>Volg ons</h2>
+    <footer>
+      <h2>Volg ons</h2>
 
-	<a href="#"><img src="images/facebook.png" width="50" alt="facebook logo"></a>
-	<a href="#"><img src="images/pinterest.png" width="50" alt="pinterest logo"></a>
-	<a href="#"><img src="images/instagram.png" width="50" alt="instagram logo"></a>
-<p> of schrijf je in voor onze <a href="#">nieuwsbrief.</a></p>
+      <a href="#"><img src="images/facebook.png" width="30" alt="facebook logo"></a>
+      <a href="#"><img src="images/pinterest.png" width="30" alt="pinterest logo"></a>
+      <a href="#"><img src="images/instagram.png" width="30" alt="instagram logo"></a>
+      <p> of schrijf je in voor onze <a href="#">nieuwsbrief.</a></p>
 
-<a href="index.html"><img src="images/logo.png" width="259" alt="website logo"></a>
+      <a href="index.html"><img src="images/logo.png" width="259" alt="website logo"></a>
 
-<p>is een initiatief van <a href="#">Bloemenbureau Holland.</a> Kijk ook eens op
-	<a href="#">Mooiwatbloemendoen.nl.</a> </p>
+      <p>is een initiatief van <a href="#">Bloemenbureau Holland.</a> Kijk ook eens op
+        <a href="#">Mooiwatbloemendoen.nl.</a> </p>
 
-	<p>Internationaal: <a href="#">pflanzenfreude.de,</a>
-		<a href="#">maplantemonbonheur.fr,</a>	
-		<a href="#">thejoyofplants.co.uk.</a>
-	</p>
+      <p>Internationaal: <a href="#">pflanzenfreude.de,</a>
+        <a href="#">maplantemonbonheur.fr,</a>
+        <a href="#">thejoyofplants.co.uk.</a>
+      </p>
 
-	<nav class="footermenu">
-		<ul>
-		  <li><a href="#">Disclaimer</a></li>
-		  <li><a href="#">Cookie beleid</a></li>
-		  <li><a href="#">Privacy</a></li>
-		  <li><a href="#">Pers</a></li>
-		</ul>
-	  </nav>
+    </footer>
 
-</footer>
+ 
+      <ul>
+        <li><a href="#">Disclaimer</a></li>
+        <li><a href="#">Cookie beleid</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Pers</a></li>
+      </ul>
 
-	<script src="scripts/script.js"></script>
-</body>
-	
+    <script src="scripts/script.js"></script>
+  </body>
+
 </html>
