--- a/calathea.html
+++ b/calathea.html
@@ -16,7 +16,7 @@
 	<header>
         <a href="index.html"><img src="images/logo.png" width="259" alt="website logo"></a>
 
-		<nav class="menu">
+		<nav>
 			<ul>
 			  <li><a href="#">Nieuwsbrief</a></li>
 			  <li><a href="#">Over ons</a></li>
@@ -34,16 +34,18 @@
 
 	</header>
 <main>
+
 <article>
 	
 	<h1>Calathea</h1>
 	<h2>Wat ritselt daar?</h2>
     <p> Bladeren die golven, ribbelen, ronde, spitse of ovale vormen hebben en 
         bovendien niet vies zijn van een patroontje. Maak kennis met de Calathea.</p>
-        <img src="images/calathea.jpeg" width="259px" alt="calatheas">   
+
+        <img src="images/calathea.jpeg" alt="calatheas">
 
 
-        <h2>Kleuren en vormen</h2>
+        <h3>Kleuren en vormen</h3>
         <p>De kracht en de pracht van de Calathea zit ‘m in zijn bladeren.
             Ovale beauty’s in verschillende groentinten met af en toe een vleugje paars of <a href="#">roze.</a> 
             Denk streepjes, vlammende patronen of alleen een gekleurde rand. 
@@ -52,14 +54,14 @@
             Zodra ‘s ochtends de zon doorbreekt, spreiden die prachtbladeren zich om 
             het licht op te vangen en ‘s avonds sluiten ze zich weer. Zo blijft je plant lekker in vorm.</p>
 
-            <h2>Symboliek</h2>
+            <h3>Symboliek</h3>
         <p>De Calathea staat symbool voor een nieuw begin. 
             Die betekenis komt van de Engelse uitdrukking ‘to turn a leaf’, wat de plant doet als het donker wordt.
             Geef de Calathea dus cadeau aan iemand die opnieuw begint. 
             Of aan jezelf natuurlijk, bij het begin van een nieuwe week, een nieuwe haarkleur of gewoon omdat je 
             verliefd bent op de Calathea.</p>
 
-            <h2>Herkomst</h2>
+            <h3>Herkomst</h3>
             <p>De plant komt oorspronkelijk uit de oerwouden van het Amazonegebied in Zuid-Amerika.
                 Daar leefde hij in de schaduw onder de dichtbegroeide vegetatie. 
                 Jouw Calathea is dus helemaal in zijn nopjes in een schaduwrijk hoekje of in een lekker 
@@ -73,8 +75,8 @@
 
 </article>
 
-<section>
-    <h2>Verzorging Calathea</h2>
+<article>
+    <h1>Verzorging Calathea</h1>
     <a href="#">De Calathea is fan van weinig of gefilterd zonlicht.</a>
     <a href="#">De plant houdt ook van vochtige lucht bij een temperatuur van 15-23 graden Celsius.</a>
     <a href="#">Geef je Calathea twee keer per week een scheutje water en regelmatig een sproeibeurt.</a>
@@ -82,70 +84,7 @@
     <a href="#">Flink gegroeid? Verpot je plant in het voorjaar.</a>
 
 
-</section>
-
-<section>
-    <h2>Alle artikelen over calathea</h2>
-
-    <article>
-        <img src="images/aandeslag.jpeg" width="259px" alt="calatheas">
-        <h2>Aan de slag met plant design
-        </h2>
-    </article>
-
-    <article>
-        <img src="images/4keer.jpeg" width="259px" alt="planten">
-        <h2>4x planten stylen in huis
-        </h2>
-        <a href="#">Wonen</a>
-    </article>
-
-    <article>
-        <img src="images/samengroot.jpeg" width="259px" alt="planten sproeien">
-        <h2>Samen groot groeien
-        </h2>
-        <a href="#">Verzorging</a>
-    </article>
-
-    <article>
-        <img src="images/creeergevoel.jpeg" width="259px" alt="vrouw in bad">
-        <h2>Creëer een vakantiegevoel met planten
-        </h2>
-        <a href="#">Verzorging</a>
-    </article>
-
-    <article>
-        <img src="images/groenestyleguide.jpeg" width="259px" alt="vrouw achter plant">
-        <h2>Groene styleguide voor je huis
-        </h2>
-        <a href="#">Wonen</a>
-    </article>
-
-    <article>
-        <img src="images/nooit meer.jpeg" width="259px" alt="planten">
-        <h2>Nooit meer de blues met planten in huis
-        </h2>
-        <a href="#">Wonen</a>
-    </article>
-
-    <article>
-        <img src="images/twaalfplanten.jpeg" width="259px" alt="planten">
-        <h2>12 planten met luchtzuiverende krachten
-        </h2>
-        <a href="#">Wonen</a>
-        <a href="#">Verzorging</a>
-    </article>
-
-    <article>
-        <img src="images/calatheais.jpeg" width="259px" alt="planten">
-        <h2>Calathea is woonplant van de maand
-        </h2>
-        <a href="#">Wonen</a>
-        <a href="#">Verzorging</a>
-    </article>
-
-
-</section>
+</article>
 
 
 <a href="#">Toon meer</a>
@@ -153,37 +92,35 @@
 </main>	
 
 <footer>
-	<h2>Volg ons</h2>
+    <h2>Volg ons</h2>
 
-	<a href="#"><img src="images/facebook.png" width="50" alt="facebook logo"></a>
-	<a href="#"><img src="images/pinterest.png" width="50" alt="pinterest logo"></a>
-	<a href="#"><img src="images/instagram.png" width="50" alt="instagram logo"></a>
-<p> of schrijf je in voor onze <a href="#">nieuwsbrief.</a></p>
+    <a href="#"><img src="images/facebook.png" width="30" alt="facebook logo"></a>
+    <a href="#"><img src="images/pinterest.png" width="30" alt="pinterest logo"></a>
+    <a href="#"><img src="images/instagram.png" width="30" alt="instagram logo"></a>
+    <p> of schrijf je in voor onze <a href="#">nieuwsbrief.</a></p>
 
-<a href="index.html"><img src="images/logo.png" width="259" alt="website logo"></a>
+    <a href="index.html"><img src="images/logo.png" width="259" alt="website logo"></a>
 
-<p>is een initiatief van <a href="#">Bloemenbureau Holland.</a> Kijk ook eens op
-	<a href="#">Mooiwatbloemendoen.nl.</a> </p>
+    <p>is een initiatief van <a href="#">Bloemenbureau Holland.</a> Kijk ook eens op
+      <a href="#">Mooiwatbloemendoen.nl.</a> </p>
 
-	<p>Internationaal: <a href="#">pflanzenfreude.de,</a>
-		<a href="#">maplantemonbonheur.fr,</a>	
-		<a href="#">thejoyofplants.co.uk.</a>
-	</p>
+    <p>Internationaal: <a href="#">pflanzenfreude.de,</a>
+      <a href="#">maplantemonbonheur.fr,</a>
+      <a href="#">thejoyofplants.co.uk.</a>
+    </p>
 
-	<nav class="footermenu">
-		<ul>
-		  <li><a href="#">Disclaimer</a></li>
-		  <li><a href="#">Cookie beleid</a></li>
-		  <li><a href="#">Privacy</a></li>
-		  <li><a href="#">Pers</a></li>
-		</ul>
-	  </nav>
+  </footer>
 
 
+    <ul>
+      <li><a href="#">Disclaimer</a></li>
+      <li><a href="#">Cookie beleid</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Pers</a></li>
+    </ul>
 
-</footer>
+  <script src="scripts/script.js"></script>
 
-	<script src="scripts/script.js"></script>
 </body>
 	
 </html>
