--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
 
       <article>
         <img src="images/trendcollectie.png"  alt="trend collectie">
-        <p>Lookbook trend collectie
-		</p>
+        <h2>Lookbook trend collectie
+        </h2>
       </article>
 
 
       <article>
         <img src="images/weelderig.jpeg" alt="weelderig outdoor">
-          <p>Een weelderig outdoor border
-		  </p>
+          <h2>Een weelderig outdoor border
+          </h2>
           <a href="calathea.html">Wonen</a>
       </article>
 
       <article>
         <img src="images/nazomeren.jpg" alt="groenrijk">
-          <p>Nazomeren met groenrijk
-		  </p>
+          <h2>Nazomeren met groenrijk
+          </h2>
           <a href="calathea.html">Erop uit</a>
       </article>
 
@@ -78,15 +78,15 @@
 
       <article>
         <img src="images/doorlopend.jpeg"  alt="planten">
-          <p>Doorlopend plantpatroon
-          <p>
+          <h2>Doorlopend plantpatroon
+          </h2>>
           <a href="calathea.html">Wonen</a>
       </article>
 
       <article>
         <img src="images/diy.jpeg"  alt="planten">
-          <p>Diy: Picture perfect palmgras
-		  </p>
+          <h2>Diy: Picture perfect palmgras
+          </h2>
           <a href="calathea.html">Wonen</a>
       </article>
 
