--- a/index.html
+++ b/index.html
@@ -35,14 +35,16 @@
     </header>
     <main>
 
+      <section>
       <article>
-        <img src="images/planten.jpeg" alt="planten">
-          <h2>Najaar/Winter 2021
-            Trend collectie:
+        <img src="images/planten.jpeg"  alt="planten">
+          <h2>Najaar/Winter 2021 </br>
+            Trend collectie: </br>
             Balanced biotope
           </h2>
           <P>Planten die je dit seizoen niet wilt missen</P>
           <a href="calathea.html">Wonen</a>
+          
       </article>
 
       <article>
@@ -90,7 +92,7 @@
       </article>
 
         <a href="calathea.html">Toon meer</a>
-
+      </section>
     </main>
 
     <footer>
